tests/negative/gold/import4-test.gold
tests/negative/import4-test.toit:5:22: error: Prefix clashes with toplevel declaration 'foo'
import .import4-a as foo
                     ^~~
tests/negative/import4-test.toit:7:1: error: Toplevel declaration 'foo'
foo:
^~~
Compilation failed
